put as ignored and removed geocoder API from public repo

--- a/config/default/config_ignore.settings.yml
+++ b/config/default/config_ignore.settings.yml
@@ -2,3 +2,7 @@ ignored_config_entities:
   - 'webform.webform.*'
   - 'xmlsitemap.xmlsitemap.*'
   - 'varbase_core.general_settings.*'
+  - 'geofield_map.settings.*'
+  - 'geolocation_google_maps.settings.*'
+  - 'geocoder.geocoder_provider.googlemaps.*'
+  - 'geocoder.geocoder_provider.bingmaps.*'
