--- a/config/default/core.entity_form_display.taxonomy_term.institution.default.yml
+++ b/config/default/core.entity_form_display.taxonomy_term.institution.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.taxonomy_term.institution.field_address
     - field.field.taxonomy_term.institution.field_associated_instituation
     - field.field.taxonomy_term.institution.field_fax_number
+    - field.field.taxonomy_term.institution.field_initials
     - field.field.taxonomy_term.institution.field_memo_of_understanding
     - field.field.taxonomy_term.institution.field_phone_number
     - field.field.taxonomy_term.institution.field_web_url
@@ -23,11 +24,11 @@ bundle: institution
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 2
     region: content
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_address:
@@ -47,6 +48,14 @@ content:
     weight: 6
     region: content
     settings:
+      placeholder: ''
+    third_party_settings: {  }
+  field_initials:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   field_memo_of_understanding:
@@ -73,14 +82,14 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -88,7 +97,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -99,13 +108,13 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 100
+    weight: 13
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
