--- a/config/default/field.field.taxonomy_term.institution.field_address.yml
+++ b/config/default/field.field.taxonomy_term.institution.field_address.yml
@@ -19,7 +19,13 @@ default_value: {  }
 default_value_callback: ''
 settings:
   available_countries: {  }
-  langcode_override: null
-  field_overrides: {  }
+  langcode_override: ''
+  field_overrides:
+    givenName:
+      override: hidden
+    familyName:
+      override: hidden
+    organization:
+      override: hidden
   fields: {  }
 field_type: address
