--- a/config/default/core.entity_form_display.block_content.varbase_gallery_block.default.yml
+++ b/config/default/core.entity_form_display.block_content.varbase_gallery_block.default.yml
@@ -17,7 +17,7 @@ mode: default
 content:
   field_gallery:
     type: inline_entity_form_simple
-    weight: 0
+    weight: 1
     region: content
     settings:
       form_mode: simplified
@@ -26,8 +26,16 @@ content:
       label_plural: ''
       collapsible: false
       collapsed: false
+      revision: false
+    third_party_settings: {  }
+  info:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
 hidden:
-  info: true
   langcode: true
   translation: true
