--- a/config/default/field.storage.block_content.field_media.yml
+++ b/config/default/field.storage.block_content.field_media.yml
@@ -1,9 +1,14 @@
+uuid: null
 langcode: en
 status: true
 dependencies:
   module:
     - block_content
+    - field_permissions
     - media
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: block_content.field_media
 field_name: field_media
 entity_type: block_content
