--- a/config/default/views.view.content.yml
+++ b/config/default/views.view.content.yml
@@ -2,13 +2,10 @@ uuid: null
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.storage.node.field_yoast_seo
   module:
     - better_exposed_filters
     - node
     - user
-    - yoast_seo
 id: content
 label: Content
 module: node
@@ -481,11 +478,6 @@ display:
           empty_zero: false
           hide_alter_empty: true
           destination: true
-        field_yoast_seo:
-          id: field_yoast_seo
-          table: node__field_yoast_seo
-          field: field_yoast_seo
-          type: yoastseo_formatter
       pager:
         type: full
         options:
@@ -1109,8 +1101,7 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_yoast_seo'
+      tags: {  }
   page_1:
     id: page_1
     display_title: Page
@@ -1145,5 +1136,4 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_yoast_seo'
+      tags: {  }
