--- a/config/default/workflows.workflow.varbase_simple_workflow.yml
+++ b/config/default/workflows.workflow.varbase_simple_workflow.yml
@@ -109,4 +109,7 @@ type_settings:
       - heritage_item
       - language_item
       - heritage_item
+      - heritage_item
+      - heritage_item
+      - heritage_item
   default_moderation_state: draft
