--- a/config/default/core.entity_view_display.node.language_item.full.yml
+++ b/config/default/core.entity_view_display.node.language_item.full.yml
@@ -20,7 +20,6 @@ dependencies:
     - field.field.node.language_item.field_unique_id
     - node.type.language_item
   module:
-    - blazy
     - ds
     - layout_builder
     - text
@@ -156,40 +155,11 @@ content:
     weight: 7
     region: main
   field_audio_video:
-    type: blazy_media
+    type: entity_reference_entity_view
     label: above
     settings:
-      caption:
-        field_media_cover_image: '0'
-        field_provider: '0'
-      class: ''
-      id: ''
-      image: ''
-      link: ''
-      overlay: ''
-      title: ''
-      vanilla: false
-      layout: ''
       view_mode: default
-      cache: 0
-      skin: ''
-      lazy: ''
-      style: ''
-      background: false
-      box_caption: ''
-      box_caption_custom: ''
-      box_media_style: ''
-      loading: ''
-      preload: false
-      responsive_image_style: ''
-      box_style: ''
-      image_style: ''
-      media_switch: ''
-      ratio: ''
-      thumbnail_style: ''
-      grid: ''
-      grid_medium: ''
-      grid_small: ''
+      link: false
     third_party_settings:
       ds:
         ft:
